# alt-cfg-converter

./: CMakeLists.txt  README.md  build.bat  build.sh
src/: converter.cpp  converter.h  helpers.h  main.cpp
